bugfix: fix problems with JSF

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -16,7 +16,7 @@
         <h:inputText value="#{libraries.libraryToCreate.address}" required="true" />
         <h:commandButton value="Add new library"
                          actionListener="#{libraries.createLibrary}"
-                         action="libraries?faces-redirect=true"
+                         action="index?faces-redirect=true"
         />
     </h:form>
 </h:body>
