--- a/src/main/webapp/user.xhtml
+++ b/src/main/webapp/user.xhtml
@@ -20,6 +20,6 @@
             <f:param name="userId" value="#{libraryUser.userToUpdate.id}" />
         </h:commandButton>
     </h:form>
-    <h:link outcome="/library" value="Back to library page"/>
+    <h:link outcome="/index" value="Back to libraries page"/>
 </h:body>
 </html>
